Closed Bug 509683 Opened 17 years ago Closed 17 years ago

nsDOMStorageMemoryDB::GetItemsTable inits hashtable twice

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: peterv, Assigned: mayhemer)

References

Details

(Keywords: assertion)

Attachments

(1 file)

This triggers the assertion "nsTHashtable::Init() should not be called twice." nsDOMStorageMemoryDB::GetItemsTable does |new nsInMemoryStorage();|, the nsInMemoryStorage constructor calls Init(20) on its hashtable and then nsDOMStorageMemoryDB::GetItemsTable calls Init() on the hashtable again.
Thanks for the catch.
Attachment #393824 - Flags: review?(peterv)
Attachment #393824 - Flags: review?(peterv) → review+
Attachment #393824 - Attachment description: v1 → v1 [Checkin comment 2]
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Flags: wanted1.9.2?
Keywords: assertion
Is this wanted/needed on 1.9.2 branch?
Component: DOM: Mozilla Extensions → DOM
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: