Bug 509683 - nsDOMStorageMemoryDB::GetItemsTable inits hashtable twice, r=peterv